// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdePageHeader unit tests renders the expected structure 1`] = `
Array [
  <section
    className="ide-page-header storybook--use-width storybook--ide-page-header-heading"
    data-ui-id="IdePageHeader"
  >
    <IdePageContent
      bleedClassName="ide-page-header__backgroundColour"
      className=""
    >
      <div
        className="bx--row"
      >
        <div
          className="bx--col"
        >
          <div
            className="ide-page-header--breadcrumb-container"
            data-ui-id="IdePageHeader--breadcrumb-container"
          >
            <Breadcrumb
              data-ui-id="breadcrumb"
              noTrailingSlash={true}
            >
              <BreadcrumbItem>
                <a
                  href="#top"
                >
                  items
                </a>
              </BreadcrumbItem>
              <BreadcrumbItem
                isCurrentPage={true}
              >
                <div>
                  item
                </div>
              </BreadcrumbItem>
            </Breadcrumb>
          </div>
          <div
            className="ide-page-header--heading-container"
            data-ui-id="IdePageHeader--heading-container"
          >
            <p
              className="ide-page-header--heading"
              data-ui-id="IdePageHeader--heading"
            >
              my heading
            </p>
          </div>
          <div
            className="ide-page-header--subtitle-container"
            data-ui-id="IdePageHeader--subtitle-container"
          />
          <div
            className="ide-page-header--tabs-container"
            data-ui-id="IdePageHeader--tabs-container"
          >
            <Tabs
              scrollDebounceWait={150}
              scrollIntoView={true}
              selected={0}
              selectionMode="automatic"
              type="default"
            >
              <Tab
                data-ui-id="tab1"
                label="Tab one"
                onClick={[Function]}
                onKeyDown={[Function]}
                selected={false}
              />
              <Tab
                data-ui-id="tab2"
                label="Tab two"
                onClick={[Function]}
                onKeyDown={[Function]}
                selected={false}
              />
            </Tabs>
          </div>
        </div>
        <div
          className="bx--col ide-page-header--custom-content-container"
          data-ui-id="IdePageHeader--custom-content-container"
        >
          <div
            className="storybook--idepageheader-button"
            data-ui-id="custom"
          >
            <Button>
              Add new topic
            </Button>
          </div>
        </div>
      </div>
    </IdePageContent>
  </section>,
]
`;

exports[`IdePageHeader unit tests renders the subtitle structure 1`] = `
Array [
  <section
    className="ide-page-header storybook--use-width storybook--ide-page-header-heading"
    data-ui-id="IdePageHeader"
  >
    <IdePageContent
      bleedClassName="ide-page-header__backgroundColour"
      className=""
    >
      <div
        className="bx--row"
      >
        <div
          className="bx--col"
        >
          <div
            className="ide-page-header--breadcrumb-container"
            data-ui-id="IdePageHeader--breadcrumb-container"
          >
            <Breadcrumb
              data-ui-id="breadcrumb"
              noTrailingSlash={true}
            >
              <BreadcrumbItem>
                <a
                  href="#top"
                >
                  items
                </a>
              </BreadcrumbItem>
              <BreadcrumbItem
                isCurrentPage={true}
              >
                <div>
                  item
                </div>
              </BreadcrumbItem>
            </Breadcrumb>
          </div>
          <div
            className="ide-page-header--heading-container"
            data-ui-id="IdePageHeader--heading-container"
          >
            <p
              className="ide-page-header--heading"
              data-ui-id="IdePageHeader--heading"
            >
              my heading
            </p>
          </div>
          <div
            className="ide-page-header--subtitle-container"
            data-ui-id="IdePageHeader--subtitle-container"
          >
            <p
              className="ide-page-header--subtitle"
              data-ui-id="IdePageHeader--subtitle"
            >
              my subtitle
            </p>
          </div>
          <div
            className="ide-page-header--tabs-container"
            data-ui-id="IdePageHeader--tabs-container"
          >
            <Tabs
              scrollDebounceWait={150}
              scrollIntoView={true}
              selected={0}
              selectionMode="automatic"
              type="default"
            >
              <Tab
                data-ui-id="tab1"
                label="Tab one"
                onClick={[Function]}
                onKeyDown={[Function]}
                selected={false}
              />
              <Tab
                data-ui-id="tab2"
                label="Tab two"
                onClick={[Function]}
                onKeyDown={[Function]}
                selected={false}
              />
            </Tabs>
          </div>
        </div>
      </div>
    </IdePageContent>
  </section>,
]
`;
